Add request for camera permission

--- a/VidyoIODemo/app/src/main/res/values/strings.xml
+++ b/VidyoIODemo/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">VidyoIODemo</string>
+    <string name="permissions">Application permissions were not accepted. Please accept permissions to use the application.</string>
 </resources>
